After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692234 - Segmentation fault dropping on sidebar after switching location on hover
Segmentation fault dropping on sidebar after switching location on hover
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.7.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 692230 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-01-21 20:22 UTC by António Fernandes
Modified: 2013-01-22 15:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backtrace (6.88 KB, text/plain)
2013-01-21 20:22 UTC, António Fernandes
  Details
Cache drag selections on drag begin (17.46 KB, patch)
2013-01-22 06:57 UTC, William Jon McCann
committed Details | Review
Keep a ref to the drop files (4.22 KB, patch)
2013-01-22 06:58 UTC, William Jon McCann
committed Details | Review
Remove cut and paste libegg (21.17 KB, patch)
2013-01-22 06:58 UTC, William Jon McCann
committed Details | Review
Normalize signal names (95.52 KB, patch)
2013-01-22 06:58 UTC, William Jon McCann
committed Details | Review

Description António Fernandes 2013-01-21 20:22:20 UTC
Created attachment 234046 [details]
backtrace

Steps to reproduce:

      Drag file.
      Hover a sidebar row while dragging.
      Wait until location switches.
      Drop file on that row.

Results:

      I get this on terminal:
(nautilus:9480): Gtk-CRITICAL **: gtk_tree_model_get_iter: assertion `path != NULL' failed
Segmentation fault (core dumped)
      
      If the row is "Trash", nautilus doesn't crash, nautilus doesn't crash, but it still leaves a the "Gtk-CRITICAL" message on terminal.

Maybe related: Bug 692230
Comment 1 William Jon McCann 2013-01-22 06:57:59 UTC
Created attachment 234076 [details] [review]
Cache drag selections on drag begin

Since the contents of the view may change.
Comment 2 William Jon McCann 2013-01-22 06:58:02 UTC
Created attachment 234077 [details] [review]
Keep a ref to the drop files

So they will still be around when the parent model goes away.
Comment 3 William Jon McCann 2013-01-22 06:58:04 UTC
Created attachment 234078 [details] [review]
Remove cut and paste libegg
Comment 4 William Jon McCann 2013-01-22 06:58:07 UTC
Created attachment 234079 [details] [review]
Normalize signal names
Comment 5 Cosimo Cecchi 2013-01-22 15:36:45 UTC
Review of attachment 234076 [details] [review]:

Thanks, looks good to me. Minior nitpick below

::: src/nautilus-list-view.c
@@ +442,3 @@
+	}
+
+	GtkTreeView *treeview;

Shouldn't this use the drag view treeview as well?
Comment 6 Cosimo Cecchi 2013-01-22 15:38:00 UTC
Review of attachment 234077 [details] [review]:

++
Comment 7 Cosimo Cecchi 2013-01-22 15:38:30 UTC
Review of attachment 234078 [details] [review]:

Yes!
Comment 8 Cosimo Cecchi 2013-01-22 15:42:15 UTC
Review of attachment 234079 [details] [review]:

Thanks!
Comment 9 William Jon McCann 2013-01-22 15:49:33 UTC
Attachment 234076 [details] pushed as 1b4eec6 - Cache drag selections on drag begin
Attachment 234077 [details] pushed as 3c22e4c - Keep a ref to the drop files
Attachment 234078 [details] pushed as 898573b - Remove cut and paste libegg
Attachment 234079 [details] pushed as d721a8f - Normalize signal names
Comment 10 Cosimo Cecchi 2013-01-22 15:51:48 UTC
*** Bug 692230 has been marked as a duplicate of this bug. ***