Cache drag selections on drag begin

Since the contents of the view may change.

https://bugzilla.gnome.org/show_bug.cgi?id=692234